Added a link to the homepage for each recipe

--- a/recipes/banku.html
+++ b/recipes/banku.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Banku</h1>
+    <a href="../index.html">Return to Homepage</a>
     <img src="../images/banku.jpg" alt="delicious banku">
     <h2>Description</h2>
     <p>Banku is a local African recipe, made of corn dough, sometimes mixed with cassava dough. The dough is usually made from corn that has been soaked in water for about two to three days. It is a delicious delicacy in countries like Ghana, and can be eaten with soup or stew.</p>
