--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Fufu</h1>
+    <a href="../index.html">Return to Homepage</a>
     <img src="../images/fufu.jpg" alt="delicious fufu">
     <h2>Description</h2>
     <p>Fufu is a starchy dough that takes on different forms (and names) across many West African countries. However the name 'Fufu' is most commonly associated with Ghana, specifically with the Akan ethnic group. Ghanaian Fufu is commonly made by “pounding” cassava and unripe plantains together into a paste, which is then molded by hand into a ball shape and served with a special sauce/soup.</p>
