--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Jollof</h1>
+    <a href="../index.html">Return to Homepage</a>
     <img src="../images/jollof.jpg" alt="delicious Jollof rice">
     <h2>Description</h2>
     <p>Jollof rice was at the heart of a controversy a few years ago, between Ghana and Nigeria, and later joined by Gambia, each claiming that the food originated from them. It is undoubtedly one of the most delicious meals you can find on the African contnent and even internationally.</p>
