Added css styles and cropped the jollof image

--- a/recipes/banku.html
+++ b/recipes/banku.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banku</title>
+    <link rel="stylesheet" href="banku.css">
 </head>
 <body>
     <h1>Banku</h1>
-    <p><a href="../index.html">Return to Homepage</a></p>
     <img src="../images/banku.jpg" alt="delicious banku">
-    <h2>Description</h2>
+    <h2 class="sub">Description</h2>
     <p>Banku is a local African recipe, made of corn dough, sometimes mixed with cassava dough. The dough is usually made from corn that has been soaked in water for about two to three days. It is a delicious delicacy in countries like Ghana, and can be eaten with soup or stew.</p>
-    <h3>Ingredients</h3>
+    <h3 class="sub">Ingredients</h3>
     <ul>
-        <li>Corn dough</li>
-        <li>Cassava dough</li>
-        <li>Water</li>
-        <li>Soup</li>
+        <li class="ingredients">Corn dough</li>
+        <li class="ingredients">Cassava dough</li>
+        <li class="ingredients">Water</li>
+        <li class="ingredients">Soup</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="sub">Steps</h3>
     <ol>
         <li>Mix the corn dough (and cassava dough) with water until there are no lumps</li>
         <li>Put the mixture on fire and stir until it become hard (like a paste)</li>
-        <li>Keep adding small amounts of water and salt until it gets a yelowish color</li>
+        <li>Keep adding smclass="ingredients"all amounts of water and salt until it gets a yelowish color</li>
         <li>Serve the food with already prepared soup or stew</li>
     </ol>
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
