--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fufu</title>
+    <link rel="stylesheet" href="fufu.css">
 </head>
 <body>
     <h1>Fufu</h1>
-    <p><a href="../index.html">Return to Homepage</a></p>
     <img src="../images/fufu.jpg" alt="delicious fufu">
-    <h2>Description</h2>
+    <h2 class="sub">Description</h2>
     <p>Fufu is a starchy dough that takes on different forms (and names) across many West African countries. However the name 'Fufu' is most commonly associated with Ghana, specifically with the Akan ethnic group. Ghanaian Fufu is commonly made by “pounding” cassava and unripe plantains together into a paste, which is then molded by hand into a ball shape and served with a special sauce/soup.</p>
     <p>In essence it is the sauce/soup that really gives each Fufu dish its unique identity. In Ghana, the common Fufu dishes are Fufu with Light Soup, Fufu with Palm Nut Soup and Fufu with Groundnut Soup.</p>
-    <h3>Ingredients</h3>
+    <h3 class="sub">Ingredients</h3>
     <ul>
-        <li>Cassava</li>
-        <li>Plantain</li>
-        <li>Soup</li>
+        <li class="ingredients">Cassava</li>
+        <li class="ingredients">Plantain</li>
+        <li class="ingredients">Soup</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="sub">Steps</h3>
     <ol>
         <li>Boil the Cassava and Plantain until it is well cooked</li>
         <li>Pound the platain first in a mortar with a pestle until, while adding a little water until its soft</li>
@@ -27,5 +27,6 @@
         <li>Mix the two together until you get a fine mixture</li>
         <li>Serve the food with already prepared soup</li>
     </ol>
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
