--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jollof</title>
+    <link rel="stylesheet" href="jollof.css">
 </head>
 <body>
     <h1>Jollof</h1>
-    <p><a href="../index.html">Return to Homepage</a></p>
     <img src="../images/jollof.jpg" alt="delicious Jollof rice">
-    <h2>Description</h2>
+    <h2 class="sub">Description</h2>
     <p>Jollof rice was at the heart of a controversy a few years ago, between Ghana and Nigeria, and later joined by Gambia, each claiming that the food originated from them. It is undoubtedly one of the most delicious meals you can find on the African contnent and even internationally.</p>
     <p>It is prepared from rice cooked in a sauce, mostly tomato sauce, redish or yellowish in color and with a great taste!</p>
-    <h3>Ingredients</h3>
+    <h3 class="sub">Ingredients</h3>
     <ul>
-        <li>Rice</li>
-        <li>Cooking Oil</li>
-        <li>Water</li>
-        <li>Tomato paste</li>
-        <li>Pepper</li>
-        <li>Onions</li>
-        <li>Salt</li>
+        <li class="ingredients">Rice</li>
+        <li class="ingredients">Cooking Oil</li>
+        <li class="ingredients">Water</li>
+        <li class="ingredients">Tomato paste</li>
+        <li class="ingredients">Pepper</li>
+        <li class="ingredients">Onions</li>
+        <li class="ingredients">Salt</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="sub">Steps</h3>
     <ol>
         <li>Heat the cooking oil in a sauce pan</li>
         <li>Add chopped onions and pepper</li>
@@ -35,5 +35,6 @@
         <li>Add salt and allow it cook until it is well cooked</li>
         <li>Serve it hot with some grilled chicken or meat. Enjoy!</li>
     </ol>
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
